# Catora

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  shopify.app.toml.example
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/catora_api/: config.py  database.py  main.py  secrets.py  storage.py  worker.py
apps/api/scripts/: build_northstar_shopify_demo_package.py  export_sales_demo_shopify_csv.py  repair_demo_image_urls.py  seed_enterprise_demo.py  seed_sales_demo.py  validate_prospect_diagnostic.py  validate_sales_demo_shopify_csv.py  validate_shopify_installation.py  validate_shopify_webhooks.py
apps/api/tests/: __init__.py  factories.py  test_auth_security.py  test_buyer_intent_templates.py  test_buyer_intent_versions.py  test_category_comparisons.py  test_client_demo.py  test_config.py  test_csv_shopify_profile.py  test_demo_reliability.py  test_diagnostics.py  test_dockerfile_startup.py  test_domain_model.py  test_health.py  test_hosted_demo_smoke.py  test_intent_breakdown.py  test_intent_comparisons.py  test_intent_coverage.py  test_intent_coverage_pagination.py  test_intent_matching.py  test_intent_parsing.py  test_intent_parsing_api.py  test_intent_runs.py  test_intent_suite_history_reruns.py  test_intent_suite_run_comparisons.py  test_intent_suite_run_history.py  test_intent_suites.py  test_intent_template_materialization.py  test_match_transitions.py  test_remediation_comparisons.py  test_secrets.py  test_settings.py  test_shopify_analysis.py  (+15 more)
(+409 files in other folders)
